plugins {
	id "org.flywaydb.flyway" version "5.0.7"
}

apply plugin: 'application'

sourceCompatibility = JavaVersion.VERSION_12

mainClassName = 'com.mageddo.sqldatapartitioning.Main'
applicationDefaultJvmArgs = getVmFlags()

compileJava {
	options.compilerArgs += getVmFlags()
}

dependencies {
	compile group: 'org.springframework.boot', name: 'spring-boot-starter-jdbc', version: '2.1.1.RELEASE'
	compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.1.1.RELEASE'
	compile group: 'org.springframework', name: 'spring-aspects', version: '5.0.3.RELEASE'
	compile group: 'org.postgresql', name: 'postgresql', version: '42.2.5'
	testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.3.2'
}


static List<String> getVmFlags() {
	['--enable-preview']
}

def path = 'src/main/resources/application.properties'
def p = new Properties()
p.load(new FileInputStream(new File(project.projectDir, path)))
flyway {
	url = p.getProperty('spring.datasource.url')
	user = 'root'
	password = 'root'
}
